dash/kube/service1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-02-25T11:13:26Z"
  labels:
    app: e815431d-3c2e-4f0e-a040-e1567097378e
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":3838,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
          f:version: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: Swagger-Codegen
    operation: Update
    time: "2021-02-25T11:13:26Z"
  name: svc-63322f68-fb5a-461e-b97c-3b1188671ab0
  namespace: default
  resourceVersion: "506472"
  uid: e1bf9a18-a8ba-46a2-b6b0-fe07fc3a17f7
spec:
  clusterIP: 10.105.194.95
  clusterIPs:
  - 10.105.194.95
  ports:
  - port: 8050
    protocol: TCP
    targetPort: 8050
  selector:
    app: e815431d-3c2e-4f0e-a040-e1567097378e
    version: 388748fa-0fda-4d05-8b98-69f21a99eb16
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
